--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -31,4 +31,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: sirvaiys/fastapi-diabetes:${{ env.SHORT_SHA }},sirvaiys/fastapi-diabetes:latest
+        tags: golu009/fastapi-CI:${{ env.SHORT_SHA }},golu009/fastapi-CI:latest
